// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty large size empty variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 100px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.25 43.5L86.1667 60.9167C82.6667 75.9583 75.75 82.0417 62.75 80.7917C60.6667 80.625 58.4167 80.25 56 79.6667L49 78C31.625 73.875 26.25 65.2917 30.3333 47.875L34.4167 30.4167C35.25 26.875 36.25 23.7917 37.5 21.25C42.375 11.1667 50.6667 8.45833 64.5833 11.75L71.5417 13.375C89 17.4583 94.3333 26.0833 90.25 43.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M62.7504 80.79C60.1671 82.54 56.917 83.9984 52.9587 85.29L46.3754 87.4567C29.8337 92.79 21.1254 88.3317 15.7504 71.79L10.4171 55.3317C5.08372 38.79 9.50038 30.04 26.042 24.7067L32.6254 22.54C34.3337 21.9984 35.9587 21.54 37.5004 21.2484C36.2504 23.79 35.2504 26.8734 34.417 30.415L30.3337 47.8734C26.2504 65.29 31.6254 73.8734 49.0004 77.9984L56.0004 79.665C58.417 80.2484 60.6671 80.6234 62.7504 80.79ZM72.1931 43.7232L72.193 43.7232L72.0838 43.7074L51.8755 38.5824C50.2088 38.1657 49.2088 36.4574 49.6255 34.7907C50.0421 33.1241 51.7505 32.1241 53.4171 32.5407L73.6255 37.6657C75.2921 38.0824 76.2921 39.7907 75.8755 41.4574C75.5421 42.8324 74.2505 43.7907 72.8755 43.7907C72.6572 43.7907 72.439 43.759 72.1931 43.7232ZM59.9837 57.807C60.2297 57.8428 60.4479 57.8746 60.6662 57.8746C62.0828 57.8746 63.3328 56.9579 63.6662 55.5412C64.0828 53.8746 63.0828 52.1662 61.4162 51.7496L49.2912 48.6662C47.6245 48.2496 45.9162 49.2496 45.4995 50.9162C45.0828 52.5829 46.0828 54.2912 47.7495 54.7079L59.8745 57.7912C59.9115 57.7965 59.9479 57.8018 59.9837 57.807Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty large size error variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 100px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.6667 66.3333L64 18.3333C60.4167 11.875 55.4584 8.33331 50 8.33331C44.5417 8.33331 39.5834 11.875 36 18.3333L9.33336 66.3333C5.95836 72.4583 5.58336 78.3333 8.2917 82.9583C11 87.5833 16.3334 90.125 23.3334 90.125H76.6667C83.6667 90.125 89 87.5833 91.7084 82.9583C94.4167 78.3333 94.0417 72.4166 90.6667 66.3333Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            d="M50.0001 61.4583C48.2918 61.4583 46.8751 60.0417 46.8751 58.3333V37.5C46.8751 35.7917 48.2918 34.375 50.0001 34.375C51.7085 34.375 53.1251 35.7917 53.1251 37.5V58.3333C53.1251 60.0417 51.7085 61.4583 50.0001 61.4583Z"
            fill="#A5A7AF"
          />
          <path
            d="M50.0001 75.0002C49.7501 75.0002 49.4584 74.9586 49.1668 74.9169C48.9168 74.8752 48.6668 74.7919 48.4168 74.6669C48.1668 74.5836 47.9168 74.4586 47.6668 74.2919C47.4584 74.1252 47.2501 73.9586 47.0418 73.7919C46.2918 73.0002 45.8334 71.9169 45.8334 70.8336C45.8334 69.7502 46.2918 68.6669 47.0418 67.8752C47.2501 67.7086 47.4584 67.5419 47.6668 67.3752C47.9168 67.2086 48.1668 67.0836 48.4168 67.0002C48.6668 66.8752 48.9168 66.7919 49.1668 66.7502C49.7084 66.6252 50.2918 66.6252 50.7918 66.7502C51.0834 66.7919 51.3334 66.8752 51.5834 67.0002C51.8334 67.0836 52.0834 67.2086 52.3334 67.3752C52.5418 67.5419 52.7501 67.7086 52.9584 67.8752C53.7084 68.6669 54.1668 69.7502 54.1668 70.8336C54.1668 71.9169 53.7084 73.0002 52.9584 73.7919C52.7501 73.9586 52.5418 74.1252 52.3334 74.2919C52.0834 74.4586 51.8334 74.5836 51.5834 74.6669C51.3334 74.7919 51.0834 74.8752 50.7918 74.9169C50.5418 74.9586 50.2501 75.0002 50.0001 75.0002Z"
            fill="#A5A7AF"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty large size loading variant renders correctly 1`] = `
.c2 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
  animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
}

.c1 {
  position: relative;
  color: #0062C9FF;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-large"
      data-testid="rovna-ui-spinner"
    >
      <svg
        className=""
        height={64}
        width={64}
      >
        <circle
          className="c2"
          cx={32}
          cy={32}
          fill="none"
          r={27}
          stroke="currentColor"
          strokeDasharray={170}
          strokeDashoffset={127.5}
          strokeLinecap="round"
          strokeWidth={5}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Empty large size no-results variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 100px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M47.9166 87.5C69.7779 87.5 87.5 69.7779 87.5 47.9167C87.5 26.0554 69.7779 8.33334 47.9166 8.33334C26.0554 8.33334 8.33331 26.0554 8.33331 47.9167C8.33331 69.7779 26.0554 87.5 47.9166 87.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M60.4167 44.7917H35.4167C33.7084 44.7917 32.2917 43.375 32.2917 41.6667C32.2917 39.9583 33.7084 38.5417 35.4167 38.5417H60.4167C62.125 38.5417 63.5417 39.9583 63.5417 41.6667C63.5417 43.375 62.125 44.7917 60.4167 44.7917ZM47.9167 57.2917H35.4167C33.7084 57.2917 32.2917 55.875 32.2917 54.1667C32.2917 52.4583 33.7084 51.0417 35.4167 51.0417H47.9167C49.625 51.0417 51.0417 52.4583 51.0417 54.1667C51.0417 55.875 49.625 57.2917 47.9167 57.2917ZM86.7086 90.8315C87.2503 91.3732 88.0003 91.6649 88.7503 91.6649C89.5003 91.6649 90.2503 91.3732 90.8336 90.8315C91.9586 89.6649 91.9586 87.8315 90.8336 86.7065L83.0836 78.9565C81.9169 77.8315 80.0836 77.8315 78.9586 78.9565C77.8336 80.1232 77.8336 81.9565 78.9586 83.0815L86.7086 90.8315Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty large size success variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 100px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 200 200"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="url(#paint0_linear_518_9854)"
            height="200"
            rx="100"
            width="200"
          />
          <path
            clipRule="evenodd"
            d="M137.626 72.7903C138.847 74.0107 138.847 75.9893 137.626 77.2097L102.21 112.626C100.989 113.847 99.0107 113.847 97.7903 112.626L81.1236 95.9597C79.9032 94.7393 79.9032 92.7607 81.1236 91.5403C82.344 90.3199 84.3226 90.3199 85.543 91.5403L100 105.997L133.207 72.7903C134.427 71.5699 136.406 71.5699 137.626 72.7903Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M87.5 65.625C75.4188 65.625 65.625 75.4188 65.625 87.5V112.5C65.625 124.581 75.4188 134.375 87.5 134.375H112.5C124.581 134.375 134.375 124.581 134.375 112.5V100C134.375 98.2741 135.774 96.875 137.5 96.875C139.226 96.875 140.625 98.2741 140.625 100V112.5C140.625 128.033 128.033 140.625 112.5 140.625H87.5C71.967 140.625 59.375 128.033 59.375 112.5V87.5C59.375 71.967 71.967 59.375 87.5 59.375H100C101.726 59.375 103.125 60.7741 103.125 62.5C103.125 64.2259 101.726 65.625 100 65.625H87.5Z"
            fill="#A5A7AF"
            fillRule="evenodd"
            opacity="0.4"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_518_9854"
              x1="36.5854"
              x2="185.366"
              y1="185.366"
              y2="31.7073"
            >
              <stop
                stopColor="#F2F7FB"
              />
              <stop
                offset="1"
                stopColor="#EAEDF5"
                stopOpacity="0"
              />
            </linearGradient>
          </defs>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty medium size empty variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 48px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 96px;
  width: 96px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.25 43.5L86.1667 60.9167C82.6667 75.9583 75.75 82.0417 62.75 80.7917C60.6667 80.625 58.4167 80.25 56 79.6667L49 78C31.625 73.875 26.25 65.2917 30.3333 47.875L34.4167 30.4167C35.25 26.875 36.25 23.7917 37.5 21.25C42.375 11.1667 50.6667 8.45833 64.5833 11.75L71.5417 13.375C89 17.4583 94.3333 26.0833 90.25 43.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M62.7504 80.79C60.1671 82.54 56.917 83.9984 52.9587 85.29L46.3754 87.4567C29.8337 92.79 21.1254 88.3317 15.7504 71.79L10.4171 55.3317C5.08372 38.79 9.50038 30.04 26.042 24.7067L32.6254 22.54C34.3337 21.9984 35.9587 21.54 37.5004 21.2484C36.2504 23.79 35.2504 26.8734 34.417 30.415L30.3337 47.8734C26.2504 65.29 31.6254 73.8734 49.0004 77.9984L56.0004 79.665C58.417 80.2484 60.6671 80.6234 62.7504 80.79ZM72.1931 43.7232L72.193 43.7232L72.0838 43.7074L51.8755 38.5824C50.2088 38.1657 49.2088 36.4574 49.6255 34.7907C50.0421 33.1241 51.7505 32.1241 53.4171 32.5407L73.6255 37.6657C75.2921 38.0824 76.2921 39.7907 75.8755 41.4574C75.5421 42.8324 74.2505 43.7907 72.8755 43.7907C72.6572 43.7907 72.439 43.759 72.1931 43.7232ZM59.9837 57.807C60.2297 57.8428 60.4479 57.8746 60.6662 57.8746C62.0828 57.8746 63.3328 56.9579 63.6662 55.5412C64.0828 53.8746 63.0828 52.1662 61.4162 51.7496L49.2912 48.6662C47.6245 48.2496 45.9162 49.2496 45.4995 50.9162C45.0828 52.5829 46.0828 54.2912 47.7495 54.7079L59.8745 57.7912C59.9115 57.7965 59.9479 57.8018 59.9837 57.807Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty medium size error variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 48px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 96px;
  width: 96px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.6667 66.3333L64 18.3333C60.4167 11.875 55.4584 8.33331 50 8.33331C44.5417 8.33331 39.5834 11.875 36 18.3333L9.33336 66.3333C5.95836 72.4583 5.58336 78.3333 8.2917 82.9583C11 87.5833 16.3334 90.125 23.3334 90.125H76.6667C83.6667 90.125 89 87.5833 91.7084 82.9583C94.4167 78.3333 94.0417 72.4166 90.6667 66.3333Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            d="M50.0001 61.4583C48.2918 61.4583 46.8751 60.0417 46.8751 58.3333V37.5C46.8751 35.7917 48.2918 34.375 50.0001 34.375C51.7085 34.375 53.1251 35.7917 53.1251 37.5V58.3333C53.1251 60.0417 51.7085 61.4583 50.0001 61.4583Z"
            fill="#A5A7AF"
          />
          <path
            d="M50.0001 75.0002C49.7501 75.0002 49.4584 74.9586 49.1668 74.9169C48.9168 74.8752 48.6668 74.7919 48.4168 74.6669C48.1668 74.5836 47.9168 74.4586 47.6668 74.2919C47.4584 74.1252 47.2501 73.9586 47.0418 73.7919C46.2918 73.0002 45.8334 71.9169 45.8334 70.8336C45.8334 69.7502 46.2918 68.6669 47.0418 67.8752C47.2501 67.7086 47.4584 67.5419 47.6668 67.3752C47.9168 67.2086 48.1668 67.0836 48.4168 67.0002C48.6668 66.8752 48.9168 66.7919 49.1668 66.7502C49.7084 66.6252 50.2918 66.6252 50.7918 66.7502C51.0834 66.7919 51.3334 66.8752 51.5834 67.0002C51.8334 67.0836 52.0834 67.2086 52.3334 67.3752C52.5418 67.5419 52.7501 67.7086 52.9584 67.8752C53.7084 68.6669 54.1668 69.7502 54.1668 70.8336C54.1668 71.9169 53.7084 73.0002 52.9584 73.7919C52.7501 73.9586 52.5418 74.1252 52.3334 74.2919C52.0834 74.4586 51.8334 74.5836 51.5834 74.6669C51.3334 74.7919 51.0834 74.8752 50.7918 74.9169C50.5418 74.9586 50.2501 75.0002 50.0001 75.0002Z"
            fill="#A5A7AF"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty medium size loading variant renders correctly 1`] = `
.c2 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
  animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
}

.c1 {
  position: relative;
  color: #0062C9FF;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-medium"
      data-testid="rovna-ui-spinner"
    >
      <svg
        className=""
        height={48}
        width={48}
      >
        <circle
          className="c2"
          cx={24}
          cy={24}
          fill="none"
          r={20}
          stroke="currentColor"
          strokeDasharray={126}
          strokeDashoffset={94.5}
          strokeLinecap="round"
          strokeWidth={4}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Empty medium size no-results variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 48px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 96px;
  width: 96px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M47.9166 87.5C69.7779 87.5 87.5 69.7779 87.5 47.9167C87.5 26.0554 69.7779 8.33334 47.9166 8.33334C26.0554 8.33334 8.33331 26.0554 8.33331 47.9167C8.33331 69.7779 26.0554 87.5 47.9166 87.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M60.4167 44.7917H35.4167C33.7084 44.7917 32.2917 43.375 32.2917 41.6667C32.2917 39.9583 33.7084 38.5417 35.4167 38.5417H60.4167C62.125 38.5417 63.5417 39.9583 63.5417 41.6667C63.5417 43.375 62.125 44.7917 60.4167 44.7917ZM47.9167 57.2917H35.4167C33.7084 57.2917 32.2917 55.875 32.2917 54.1667C32.2917 52.4583 33.7084 51.0417 35.4167 51.0417H47.9167C49.625 51.0417 51.0417 52.4583 51.0417 54.1667C51.0417 55.875 49.625 57.2917 47.9167 57.2917ZM86.7086 90.8315C87.2503 91.3732 88.0003 91.6649 88.7503 91.6649C89.5003 91.6649 90.2503 91.3732 90.8336 90.8315C91.9586 89.6649 91.9586 87.8315 90.8336 86.7065L83.0836 78.9565C81.9169 77.8315 80.0836 77.8315 78.9586 78.9565C77.8336 80.1232 77.8336 81.9565 78.9586 83.0815L86.7086 90.8315Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty medium size success variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 48px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 96px;
  width: 96px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 200 200"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="url(#paint0_linear_518_9854)"
            height="200"
            rx="100"
            width="200"
          />
          <path
            clipRule="evenodd"
            d="M137.626 72.7903C138.847 74.0107 138.847 75.9893 137.626 77.2097L102.21 112.626C100.989 113.847 99.0107 113.847 97.7903 112.626L81.1236 95.9597C79.9032 94.7393 79.9032 92.7607 81.1236 91.5403C82.344 90.3199 84.3226 90.3199 85.543 91.5403L100 105.997L133.207 72.7903C134.427 71.5699 136.406 71.5699 137.626 72.7903Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M87.5 65.625C75.4188 65.625 65.625 75.4188 65.625 87.5V112.5C65.625 124.581 75.4188 134.375 87.5 134.375H112.5C124.581 134.375 134.375 124.581 134.375 112.5V100C134.375 98.2741 135.774 96.875 137.5 96.875C139.226 96.875 140.625 98.2741 140.625 100V112.5C140.625 128.033 128.033 140.625 112.5 140.625H87.5C71.967 140.625 59.375 128.033 59.375 112.5V87.5C59.375 71.967 71.967 59.375 87.5 59.375H100C101.726 59.375 103.125 60.7741 103.125 62.5C103.125 64.2259 101.726 65.625 100 65.625H87.5Z"
            fill="#A5A7AF"
            fillRule="evenodd"
            opacity="0.4"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_518_9854"
              x1="36.5854"
              x2="185.366"
              y1="185.366"
              y2="31.7073"
            >
              <stop
                stopColor="#F2F7FB"
              />
              <stop
                offset="1"
                stopColor="#EAEDF5"
                stopOpacity="0"
              />
            </linearGradient>
          </defs>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty small size empty variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 28px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 56px;
  width: 56px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.25 43.5L86.1667 60.9167C82.6667 75.9583 75.75 82.0417 62.75 80.7917C60.6667 80.625 58.4167 80.25 56 79.6667L49 78C31.625 73.875 26.25 65.2917 30.3333 47.875L34.4167 30.4167C35.25 26.875 36.25 23.7917 37.5 21.25C42.375 11.1667 50.6667 8.45833 64.5833 11.75L71.5417 13.375C89 17.4583 94.3333 26.0833 90.25 43.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M62.7504 80.79C60.1671 82.54 56.917 83.9984 52.9587 85.29L46.3754 87.4567C29.8337 92.79 21.1254 88.3317 15.7504 71.79L10.4171 55.3317C5.08372 38.79 9.50038 30.04 26.042 24.7067L32.6254 22.54C34.3337 21.9984 35.9587 21.54 37.5004 21.2484C36.2504 23.79 35.2504 26.8734 34.417 30.415L30.3337 47.8734C26.2504 65.29 31.6254 73.8734 49.0004 77.9984L56.0004 79.665C58.417 80.2484 60.6671 80.6234 62.7504 80.79ZM72.1931 43.7232L72.193 43.7232L72.0838 43.7074L51.8755 38.5824C50.2088 38.1657 49.2088 36.4574 49.6255 34.7907C50.0421 33.1241 51.7505 32.1241 53.4171 32.5407L73.6255 37.6657C75.2921 38.0824 76.2921 39.7907 75.8755 41.4574C75.5421 42.8324 74.2505 43.7907 72.8755 43.7907C72.6572 43.7907 72.439 43.759 72.1931 43.7232ZM59.9837 57.807C60.2297 57.8428 60.4479 57.8746 60.6662 57.8746C62.0828 57.8746 63.3328 56.9579 63.6662 55.5412C64.0828 53.8746 63.0828 52.1662 61.4162 51.7496L49.2912 48.6662C47.6245 48.2496 45.9162 49.2496 45.4995 50.9162C45.0828 52.5829 46.0828 54.2912 47.7495 54.7079L59.8745 57.7912C59.9115 57.7965 59.9479 57.8018 59.9837 57.807Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty small size error variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 28px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 56px;
  width: 56px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.6667 66.3333L64 18.3333C60.4167 11.875 55.4584 8.33331 50 8.33331C44.5417 8.33331 39.5834 11.875 36 18.3333L9.33336 66.3333C5.95836 72.4583 5.58336 78.3333 8.2917 82.9583C11 87.5833 16.3334 90.125 23.3334 90.125H76.6667C83.6667 90.125 89 87.5833 91.7084 82.9583C94.4167 78.3333 94.0417 72.4166 90.6667 66.3333Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            d="M50.0001 61.4583C48.2918 61.4583 46.8751 60.0417 46.8751 58.3333V37.5C46.8751 35.7917 48.2918 34.375 50.0001 34.375C51.7085 34.375 53.1251 35.7917 53.1251 37.5V58.3333C53.1251 60.0417 51.7085 61.4583 50.0001 61.4583Z"
            fill="#A5A7AF"
          />
          <path
            d="M50.0001 75.0002C49.7501 75.0002 49.4584 74.9586 49.1668 74.9169C48.9168 74.8752 48.6668 74.7919 48.4168 74.6669C48.1668 74.5836 47.9168 74.4586 47.6668 74.2919C47.4584 74.1252 47.2501 73.9586 47.0418 73.7919C46.2918 73.0002 45.8334 71.9169 45.8334 70.8336C45.8334 69.7502 46.2918 68.6669 47.0418 67.8752C47.2501 67.7086 47.4584 67.5419 47.6668 67.3752C47.9168 67.2086 48.1668 67.0836 48.4168 67.0002C48.6668 66.8752 48.9168 66.7919 49.1668 66.7502C49.7084 66.6252 50.2918 66.6252 50.7918 66.7502C51.0834 66.7919 51.3334 66.8752 51.5834 67.0002C51.8334 67.0836 52.0834 67.2086 52.3334 67.3752C52.5418 67.5419 52.7501 67.7086 52.9584 67.8752C53.7084 68.6669 54.1668 69.7502 54.1668 70.8336C54.1668 71.9169 53.7084 73.0002 52.9584 73.7919C52.7501 73.9586 52.5418 74.1252 52.3334 74.2919C52.0834 74.4586 51.8334 74.5836 51.5834 74.6669C51.3334 74.7919 51.0834 74.8752 50.7918 74.9169C50.5418 74.9586 50.2501 75.0002 50.0001 75.0002Z"
            fill="#A5A7AF"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty small size loading variant renders correctly 1`] = `
.c2 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
  animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
}

.c1 {
  position: relative;
  color: #0062C9FF;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-small"
      data-testid="rovna-ui-spinner"
    >
      <svg
        className=""
        height={32}
        width={32}
      >
        <circle
          className="c2"
          cx={16}
          cy={16}
          fill="none"
          r={13}
          stroke="currentColor"
          strokeDasharray={82}
          strokeDashoffset={61.5}
          strokeLinecap="round"
          strokeWidth={3}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Empty small size no-results variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 28px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 56px;
  width: 56px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M47.9166 87.5C69.7779 87.5 87.5 69.7779 87.5 47.9167C87.5 26.0554 69.7779 8.33334 47.9166 8.33334C26.0554 8.33334 8.33331 26.0554 8.33331 47.9167C8.33331 69.7779 26.0554 87.5 47.9166 87.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M60.4167 44.7917H35.4167C33.7084 44.7917 32.2917 43.375 32.2917 41.6667C32.2917 39.9583 33.7084 38.5417 35.4167 38.5417H60.4167C62.125 38.5417 63.5417 39.9583 63.5417 41.6667C63.5417 43.375 62.125 44.7917 60.4167 44.7917ZM47.9167 57.2917H35.4167C33.7084 57.2917 32.2917 55.875 32.2917 54.1667C32.2917 52.4583 33.7084 51.0417 35.4167 51.0417H47.9167C49.625 51.0417 51.0417 52.4583 51.0417 54.1667C51.0417 55.875 49.625 57.2917 47.9167 57.2917ZM86.7086 90.8315C87.2503 91.3732 88.0003 91.6649 88.7503 91.6649C89.5003 91.6649 90.2503 91.3732 90.8336 90.8315C91.9586 89.6649 91.9586 87.8315 90.8336 86.7065L83.0836 78.9565C81.9169 77.8315 80.0836 77.8315 78.9586 78.9565C77.8336 80.1232 77.8336 81.9565 78.9586 83.0815L86.7086 90.8315Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty small size success variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 28px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 56px;
  width: 56px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 200 200"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="url(#paint0_linear_518_9854)"
            height="200"
            rx="100"
            width="200"
          />
          <path
            clipRule="evenodd"
            d="M137.626 72.7903C138.847 74.0107 138.847 75.9893 137.626 77.2097L102.21 112.626C100.989 113.847 99.0107 113.847 97.7903 112.626L81.1236 95.9597C79.9032 94.7393 79.9032 92.7607 81.1236 91.5403C82.344 90.3199 84.3226 90.3199 85.543 91.5403L100 105.997L133.207 72.7903C134.427 71.5699 136.406 71.5699 137.626 72.7903Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M87.5 65.625C75.4188 65.625 65.625 75.4188 65.625 87.5V112.5C65.625 124.581 75.4188 134.375 87.5 134.375H112.5C124.581 134.375 134.375 124.581 134.375 112.5V100C134.375 98.2741 135.774 96.875 137.5 96.875C139.226 96.875 140.625 98.2741 140.625 100V112.5C140.625 128.033 128.033 140.625 112.5 140.625H87.5C71.967 140.625 59.375 128.033 59.375 112.5V87.5C59.375 71.967 71.967 59.375 87.5 59.375H100C101.726 59.375 103.125 60.7741 103.125 62.5C103.125 64.2259 101.726 65.625 100 65.625H87.5Z"
            fill="#A5A7AF"
            fillRule="evenodd"
            opacity="0.4"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_518_9854"
              x1="36.5854"
              x2="185.366"
              y1="185.366"
              y2="31.7073"
            >
              <stop
                stopColor="#F2F7FB"
              />
              <stop
                offset="1"
                stopColor="#EAEDF5"
                stopOpacity="0"
              />
            </linearGradient>
          </defs>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty xs size empty variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 36px;
  width: 36px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.25 43.5L86.1667 60.9167C82.6667 75.9583 75.75 82.0417 62.75 80.7917C60.6667 80.625 58.4167 80.25 56 79.6667L49 78C31.625 73.875 26.25 65.2917 30.3333 47.875L34.4167 30.4167C35.25 26.875 36.25 23.7917 37.5 21.25C42.375 11.1667 50.6667 8.45833 64.5833 11.75L71.5417 13.375C89 17.4583 94.3333 26.0833 90.25 43.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M62.7504 80.79C60.1671 82.54 56.917 83.9984 52.9587 85.29L46.3754 87.4567C29.8337 92.79 21.1254 88.3317 15.7504 71.79L10.4171 55.3317C5.08372 38.79 9.50038 30.04 26.042 24.7067L32.6254 22.54C34.3337 21.9984 35.9587 21.54 37.5004 21.2484C36.2504 23.79 35.2504 26.8734 34.417 30.415L30.3337 47.8734C26.2504 65.29 31.6254 73.8734 49.0004 77.9984L56.0004 79.665C58.417 80.2484 60.6671 80.6234 62.7504 80.79ZM72.1931 43.7232L72.193 43.7232L72.0838 43.7074L51.8755 38.5824C50.2088 38.1657 49.2088 36.4574 49.6255 34.7907C50.0421 33.1241 51.7505 32.1241 53.4171 32.5407L73.6255 37.6657C75.2921 38.0824 76.2921 39.7907 75.8755 41.4574C75.5421 42.8324 74.2505 43.7907 72.8755 43.7907C72.6572 43.7907 72.439 43.759 72.1931 43.7232ZM59.9837 57.807C60.2297 57.8428 60.4479 57.8746 60.6662 57.8746C62.0828 57.8746 63.3328 56.9579 63.6662 55.5412C64.0828 53.8746 63.0828 52.1662 61.4162 51.7496L49.2912 48.6662C47.6245 48.2496 45.9162 49.2496 45.4995 50.9162C45.0828 52.5829 46.0828 54.2912 47.7495 54.7079L59.8745 57.7912C59.9115 57.7965 59.9479 57.8018 59.9837 57.807Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty xs size error variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 36px;
  width: 36px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M90.6667 66.3333L64 18.3333C60.4167 11.875 55.4584 8.33331 50 8.33331C44.5417 8.33331 39.5834 11.875 36 18.3333L9.33336 66.3333C5.95836 72.4583 5.58336 78.3333 8.2917 82.9583C11 87.5833 16.3334 90.125 23.3334 90.125H76.6667C83.6667 90.125 89 87.5833 91.7084 82.9583C94.4167 78.3333 94.0417 72.4166 90.6667 66.3333Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            d="M50.0001 61.4583C48.2918 61.4583 46.8751 60.0417 46.8751 58.3333V37.5C46.8751 35.7917 48.2918 34.375 50.0001 34.375C51.7085 34.375 53.1251 35.7917 53.1251 37.5V58.3333C53.1251 60.0417 51.7085 61.4583 50.0001 61.4583Z"
            fill="#A5A7AF"
          />
          <path
            d="M50.0001 75.0002C49.7501 75.0002 49.4584 74.9586 49.1668 74.9169C48.9168 74.8752 48.6668 74.7919 48.4168 74.6669C48.1668 74.5836 47.9168 74.4586 47.6668 74.2919C47.4584 74.1252 47.2501 73.9586 47.0418 73.7919C46.2918 73.0002 45.8334 71.9169 45.8334 70.8336C45.8334 69.7502 46.2918 68.6669 47.0418 67.8752C47.2501 67.7086 47.4584 67.5419 47.6668 67.3752C47.9168 67.2086 48.1668 67.0836 48.4168 67.0002C48.6668 66.8752 48.9168 66.7919 49.1668 66.7502C49.7084 66.6252 50.2918 66.6252 50.7918 66.7502C51.0834 66.7919 51.3334 66.8752 51.5834 67.0002C51.8334 67.0836 52.0834 67.2086 52.3334 67.3752C52.5418 67.5419 52.7501 67.7086 52.9584 67.8752C53.7084 68.6669 54.1668 69.7502 54.1668 70.8336C54.1668 71.9169 53.7084 73.0002 52.9584 73.7919C52.7501 73.9586 52.5418 74.1252 52.3334 74.2919C52.0834 74.4586 51.8334 74.5836 51.5834 74.6669C51.3334 74.7919 51.0834 74.8752 50.7918 74.9169C50.5418 74.9586 50.2501 75.0002 50.0001 75.0002Z"
            fill="#A5A7AF"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty xs size loading variant renders correctly 1`] = `
.c2 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, glgABt 1s linear infinite;
  animation: rotate 1s linear infinite, glgABt 1s linear infinite;
}

.c1 {
  position: relative;
  color: #0062C9FF;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-xs"
      data-testid="rovna-ui-spinner"
    >
      <svg
        className=""
        height={16}
        width={16}
      >
        <circle
          className="c2"
          cx={8}
          cy={8}
          fill="none"
          r={6}
          stroke="currentColor"
          strokeDasharray={38}
          strokeDashoffset={28.5}
          strokeLinecap="round"
          strokeWidth={2}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Empty xs size no-results variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 36px;
  width: 36px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M47.9166 87.5C69.7779 87.5 87.5 69.7779 87.5 47.9167C87.5 26.0554 69.7779 8.33334 47.9166 8.33334C26.0554 8.33334 8.33331 26.0554 8.33331 47.9167C8.33331 69.7779 26.0554 87.5 47.9166 87.5Z"
            fill="#A5A7AF"
            opacity="0.4"
          />
          <path
            clipRule="evenodd"
            d="M60.4167 44.7917H35.4167C33.7084 44.7917 32.2917 43.375 32.2917 41.6667C32.2917 39.9583 33.7084 38.5417 35.4167 38.5417H60.4167C62.125 38.5417 63.5417 39.9583 63.5417 41.6667C63.5417 43.375 62.125 44.7917 60.4167 44.7917ZM47.9167 57.2917H35.4167C33.7084 57.2917 32.2917 55.875 32.2917 54.1667C32.2917 52.4583 33.7084 51.0417 35.4167 51.0417H47.9167C49.625 51.0417 51.0417 52.4583 51.0417 54.1667C51.0417 55.875 49.625 57.2917 47.9167 57.2917ZM86.7086 90.8315C87.2503 91.3732 88.0003 91.6649 88.7503 91.6649C89.5003 91.6649 90.2503 91.3732 90.8336 90.8315C91.9586 89.6649 91.9586 87.8315 90.8336 86.7065L83.0836 78.9565C81.9169 77.8315 80.0836 77.8315 78.9586 78.9565C77.8336 80.1232 77.8336 81.9565 78.9586 83.0815L86.7086 90.8315Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Empty xs size success variant renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 36px;
  width: 36px;
  border-radius: 50%;
  background: linear-gradient(44deg,#f2f7fb 12.72%,rgba(234,237,245,0) 88.35%);
}

<div
  className="c0 rovna-ui-empty-root"
  data-testid="rovna-ui-empty"
>
  <div
    className="rovna-ui-empty-header"
  >
    <div
      className="c1"
    >
      <span
        className="c2 rovna-ui-icon-root anticon"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 200 200"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="url(#paint0_linear_518_9854)"
            height="200"
            rx="100"
            width="200"
          />
          <path
            clipRule="evenodd"
            d="M137.626 72.7903C138.847 74.0107 138.847 75.9893 137.626 77.2097L102.21 112.626C100.989 113.847 99.0107 113.847 97.7903 112.626L81.1236 95.9597C79.9032 94.7393 79.9032 92.7607 81.1236 91.5403C82.344 90.3199 84.3226 90.3199 85.543 91.5403L100 105.997L133.207 72.7903C134.427 71.5699 136.406 71.5699 137.626 72.7903Z"
            fill="#A5A7AF"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M87.5 65.625C75.4188 65.625 65.625 75.4188 65.625 87.5V112.5C65.625 124.581 75.4188 134.375 87.5 134.375H112.5C124.581 134.375 134.375 124.581 134.375 112.5V100C134.375 98.2741 135.774 96.875 137.5 96.875C139.226 96.875 140.625 98.2741 140.625 100V112.5C140.625 128.033 128.033 140.625 112.5 140.625H87.5C71.967 140.625 59.375 128.033 59.375 112.5V87.5C59.375 71.967 71.967 59.375 87.5 59.375H100C101.726 59.375 103.125 60.7741 103.125 62.5C103.125 64.2259 101.726 65.625 100 65.625H87.5Z"
            fill="#A5A7AF"
            fillRule="evenodd"
            opacity="0.4"
          />
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_518_9854"
              x1="36.5854"
              x2="185.366"
              y1="185.366"
              y2="31.7073"
            >
              <stop
                stopColor="#F2F7FB"
              />
              <stop
                offset="1"
                stopColor="#EAEDF5"
                stopOpacity="0"
              />
            </linearGradient>
          </defs>
        </svg>
      </span>
    </div>
  </div>
</div>
`;
